--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL="https://securitycheck-backend.onrender.com/"
+VITE_BACKEND_URL="https://securitycheck-backend.onrender.com"
 # env
